--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.67.1",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,7 +34,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
@@ -40,7 +42,6 @@
     "globals": "^15.15.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.17",
-
     "vite": "^6.2.0"
   }
 }
